// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cypress Generator should render empty test correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testSuite"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue=""
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testDescription"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue=""
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a description for your test
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Code
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Events
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Headers
      </span>
    </label>
    <label
      className="_2xr_2PwwBn0jwkzvvP5PKe"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="_1EUjYjpYvYDrup4HQpjJMf"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="N-HkZtzD4J4oU9qn_-yvs textArea"
  >
    <div
      className="_3rymx_8W221gnQrkBW4CCG"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="_1HGjbdJPl4WE23V2ftyaNX"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA sf0RpxblxNDZUlesZ5VIc"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA"
      />
    </div>
  </div>
</div>
`;

exports[`Cypress Generator should render events correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testSuite"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue=""
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testDescription"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue=""
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a description for your test
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Code
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Events
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Headers
      </span>
    </label>
    <label
      className="_2xr_2PwwBn0jwkzvvP5PKe"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="_1EUjYjpYvYDrup4HQpjJMf"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="N-HkZtzD4J4oU9qn_-yvs textArea"
  >
    <div
      className="_3rymx_8W221gnQrkBW4CCG"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  beforeEach(() => {
    cy.visit('http://willemliu.nl');
    cy.clearCookies();
    cy.reload(true);
  });

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
    cy.viewport(320, 240);
    cy.visit('http://willemliu.nl');
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="_1HGjbdJPl4WE23V2ftyaNX"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA sf0RpxblxNDZUlesZ5VIc"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA"
      />
    </div>
  </div>
</div>
`;

exports[`Cypress Generator should render headers correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testSuite"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue=""
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testDescription"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue=""
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value=""
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a description for your test
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Code
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Events
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Headers
      </span>
    </label>
    <label
      className="_2xr_2PwwBn0jwkzvvP5PKe"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="_1EUjYjpYvYDrup4HQpjJMf"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="N-HkZtzD4J4oU9qn_-yvs textArea"
  >
    <div
      className="_3rymx_8W221gnQrkBW4CCG"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  beforeEach(() => {
    cy.visit('http://willemliu.nl');
    cy.clearCookies();
    cy.reload(true);
  });

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
    cy.viewport(320, 240);
    cy.visit('http://willemliu.nl', {headers: {\\"Content-type\\": \\"application/json\\", \\"x-platform\\": \\"Android\\"}});
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="_1HGjbdJPl4WE23V2ftyaNX"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA sf0RpxblxNDZUlesZ5VIc"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA"
      />
    </div>
  </div>
</div>
`;

exports[`Cypress Generator should render test with suite name and description correctly 1`] = `
<div
  className="cypressGenerator"
>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testSuite"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Test suite name"
        className="testSuite"
        defaultValue="Test suite name"
        errorMessage="Please enter a name for your test suite"
        id="testSuite"
        label="Test suite name"
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Test suite name"
        type="text"
        value="Test suite name"
      />
      <div>
        <label
          htmlFor="testSuite"
        >
          Test suite name
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="_3n6K_fKxrsVm1CJPqwAq8o testDescription"
  >
    <div
      className="_38eXidZASNp7atFrIvNeiv"
    >
      <input
        aria-label="Description"
        className="testDescription"
        defaultValue="Test description"
        errorMessage="Please enter a description for your test"
        id="testDescription"
        label="Description"
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        title="Description"
        type="text"
        value="Test description"
      />
      <div>
        <label
          htmlFor="testDescription"
        >
          Description
        </label>
        <span
          className="_2r0FisJhjYRQ1B7ApaziUQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV SB2FTwzzEpP_rkCBbXf_H"
      >
        Please enter a description for your test
      </div>
      <div
        className="_32QKThU6BOofPz0VKi6SvV"
      />
    </div>
  </div>
  <div
    className="extraOptions"
  >
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Code"
        defaultChecked={true}
        id="code"
        name="views"
        onClick={[Function]}
        title="Show code"
        type="radio"
        value="code"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Code
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Events"
        id="events"
        name="views"
        onClick={[Function]}
        title="Show events"
        type="radio"
        value="events"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Events
      </span>
    </label>
    <label
      className="J-gTWf2zmkW2ZoUTEfVM1"
    >
      <input
        aria-label="Headers"
        id="headers"
        name="views"
        onClick={[Function]}
        title="Show headers"
        type="radio"
        value="headers"
      />
      <span
        className="_3vOMhlK4xJIv2rBAJOXmvS"
      >
        Headers
      </span>
    </label>
    <label
      className="_2xr_2PwwBn0jwkzvvP5PKe"
    >
      <input
        aria-label="Basic Auth"
        checked={false}
        id="basicAuth"
        label="Basic Auth"
        name="basicAuth"
        onChange={[MockFunction]}
        type="checkbox"
        value="basic-auth"
      />
      <span
        className="_1EUjYjpYvYDrup4HQpjJMf"
      >
        Basic Auth
      </span>
    </label>
  </div>
  <div
    className="N-HkZtzD4J4oU9qn_-yvs textArea"
  >
    <div
      className="_3rymx_8W221gnQrkBW4CCG"
    >
      <textarea
        aria-label="Value"
        className="textArea"
        data-show-error={false}
        id="codeArea"
        name="codeArea"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Start using the website to record some events"
        readOnly={true}
        spellCheck={false}
        title="Value"
        value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test suite name', () => {
  

  afterEach(() => {
    cy.clearCookies();
  });

  it('Test description', () => {
  });
});
"
      />
      <div>
        <label
          htmlFor="codeArea"
        >
          Value
        </label>
        <span
          className="_1HGjbdJPl4WE23V2ftyaNX"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"512\\" height=\\"512\\" viewBox=\\"-240 -240 512 512\\" xml:space=\\"preserve\\"><path d=\\"m-54.371 243.208 313.454-433.155-37.483-20.687L-66.106 102.03l-138.441-54.537-22.77 28.15 172.946 167.565z\\"/></svg>",
            }
          }
        />
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA sf0RpxblxNDZUlesZ5VIc"
      >
        Voer een geldige waarde in
      </div>
      <div
        className="_1tzA5J2lU3Dtk5elSSvQHA"
      />
    </div>
  </div>
</div>
`;
